<resources>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="back_button">Back</string>
    <string name="first_name_hint">Enter your first name</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>
    <string name="re_enter_password_hint">Re-enter your password</string>
    <string name="professor_valid_check">I\'m a professor and would like to verify my account!</string>
    <string name="sign_up">Sign Up!</string>

    <string name="error_sign_up_only_one_name">You must only enter one name!</string>
    <string name="error_name_length">You must enter a name!</string>
    <string name="error_invalid_password">You must enter a password with at least one capital letter, 8 or more characters, and must contain at least one number</string>
    <string name="error_password_length">You must enter a password!</string>
    <string name="error_username_length">You must enter a username!</string>

    <string name="app_name">Cyclone Insider</string>
    <string name="login_no_id_password">You must enter your Net ID and Password</string>
    <string name="password_all_boxes">You must enter characters in all text boxes</string>
    <string name="password_not_equal">New password must be the same in both text boxes</string>
    <string name="password_equal">New Password has been set!</string>
    <string name="login_no_id">You must enter your Net ID</string>
    <string name="login_no_password">You must enter your Password</string>
    <string name="login_invalid_login">Invalid Net ID or Password</string>
    <string name="title_activity_create_room">CreateRoomActivity</string>
    <string name="title_activity_invite">Invite</string>
</resources>
