<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FeedbackActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="688dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="654dp"
            android:layout_margin="16dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/feedback_message"
                android:layout_width="match_parent"
                android:layout_height="529dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Enter feedback here"
                android:gravity="top|left"
                android:textSize="10dp"/>
            <TextView
                android:id="@+id/hidden_feedback_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Testing"
                android:gravity="center"
                android:visibility="invisible"
                android:textColor="#ff0000"
                />
            <Button
                android:id="@+id/email_button"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_gravity="right"
                android:onClick="sendEmail"
                android:text="Send Email"
                android:backgroundTint="#FFD600"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
